# moga-mogate-FRONTIER

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  build.sh  package-lock.json  package.json  tsconfig.json
programs/mogate_giftcard/: Cargo.toml
programs/mogate_giftcard/src/: lib.rs
programs/mogate_giftcard_arcium/: Cargo.toml
programs/mogate_giftcard_arcium/src/: lib.rs
programs/mogate_giftcard_encrypt/: Cargo.toml
programs/mogate_giftcard_encrypt/src/: lib.rs
scripts/: anchorClient.ts  config.ts
scripts/config/: mogate_giftcard.config.json  mogate_giftcard.state.json
scripts/lib/: arciumGiftcard.ts  backendSignature.ts  encoding.ts  encryptNetwork.ts  encryptPermission.ts  giftcardNft.ts  permissions.ts
scripts/steps/admin/: 00-init-config.ts  01-create-collection.ts  manual-init-giftcard.ts  set-backend-authority.ts  set-confidential-programs.ts
scripts/steps/arcium/: 02-mint-giftcard.ts  02b-mint-giftcard-pure-arcium.ts  04-decrypt-giftcode.ts  04b-decrypt-giftcode-pure-arcium.ts
scripts/steps/encrypt/: 02-atomic-mint-giftcard.ts  02-checkout-mint-giftcard.ts  02-gateway-mint-giftcard.ts  02-mint-giftcard.ts  02b-mint-giftcard-pure-refhe.ts  03b-copy-giftcode-permission.ts  04-decrypt-giftcode.ts  04b-decrypt-giftcode-pure-refhe.ts
scripts/steps/redeem/: 03-unwrap.ts  05-backend-cleanup.ts  05-batch-burn.ts  05-burn-redeemed.ts
scripts/types/: encrypt-pre-alpha-solana-client.d.ts
